--- a/package.json
+++ b/package.json
@@ -19,12 +19,13 @@
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
     "rxjs": "~7.8.0",
+    "ts-evaluator": "^2.0.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^16.0.2",
-    "@angular/cli": "~16.0.2",
+    "@angular-devkit/build-angular": "^19.2.12",
+    "@angular/cli": "^16.2.16",
     "@angular/compiler-cli": "^16.0.0",
     "@types/jasmine": "~4.3.0",
     "autoprefixer": "^10.4.21",
@@ -37,5 +38,11 @@
     "postcss": "^8.5.3",
     "tailwindcss": "^3.4.17",
     "typescript": "~5.0.2"
-  }
+  },
+  "budgets": [
+    {
+      "type": "componentStyle",
+      "maximumWarning": "5kb"
+    }
+  ]
 }
